--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/style.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/additional.css"/>
+    <link rel="icon" type="image/png" href="/static/img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/img/favicon-16x16.png" sizes="16x16" />
+
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
             integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
             crossorigin="anonymous"></script>
@@ -588,7 +591,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528096203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528096804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
