--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/style.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/additional.css"/>
+    <link rel="icon" type="image/png" href="/static/img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/img/favicon-16x16.png" sizes="16x16" />
+
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
             integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
             crossorigin="anonymous"></script>
@@ -218,13 +221,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17221527">
                                         
-                                            1160 comments
+                                            1174 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=miguelrochefort">miguelrochefort</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528056866"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    2164 points
+                                    2182 points
                                 </span>
                             </td>
                         </tr>
@@ -242,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17223116">
                                         
-                                            234 comments
+                                            237 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=AgentK20">AgentK20</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528068598"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    947 points
+                                    963 points
                                 </span>
                             </td>
                         </tr>
@@ -512,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=katiey">katiey</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528007929"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    322 points
+                                    324 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528096203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528096804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
