--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/byteconf/stripe-is-building-a-ruby-typechecker-d6cd7cee6abf">Stripe is building a Ruby typechecker</a>
+                                    <a href="https://kb.apify.com/tips-and-tricks/several-tips-how-to-bypass-website-anti-scraping-protections">Bypassing website anti-scraping protections</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217815">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17203903">
                                         
-                                            76 comments
+                                            117 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thibaut_barrere">thibaut_barrere</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527997894"
+                                            href="https://news.ycombinator.com/user?id=jardah">jardah</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527846557"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    225 points
+                                    229 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528055363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    221 points
+                                    222 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528020146"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    194 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528099203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528099803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
