--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.collaborativefund.com/blog/the-psychology-of-money/">The Psychology of Money</a>
+                                    <a href="https://bytemybits.gitlab.io/post/2018-05-23-how-to-android-without-google-easy-way/">How to Android without Google</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17221379">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213808">
                                         
-                                            39 comments
+                                            96 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528055363"
+                                            href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527933214"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    229 points
+                                    230 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528100404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528101003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
