--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -335,19 +335,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/uk-44346270">Simon Cowell ditches phone for 10 months – and counting</a>
+                                    <a href="https://sci-hub.love/">Sci-Hub.love: The latest Sci-Hub working domain</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218576">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17225592">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528015075"
+                                            href="https://news.ycombinator.com/user?id=Vinnl">Vinnl</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528100145"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528101003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528101603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
