--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/SciRuby/rubex">More Ruby awesomeness – A Ruby-like language for writing Ruby C extensions</a>
+                                    <a href="https://lists.z.cash.foundation/pipermail/general/2018/000013.html">Zcash Foundation Update – May, 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17224373">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224289">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=stanislavb">stanislavb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528083087"
+                                            href="https://news.ycombinator.com/user?id=exolymph">exolymph</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528082001"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528101603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528102203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
