--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://iotdarwinaward.com/post/improve-your-privacy-in-age-of-mass-surveillance/">Improve Your Privacy in the Age of Mass Surveillance</a>
+                                    <a href="http://www.governmentattic.org/28docs/NSAsecurityPosters_1950s-60s.pdf">NSA posters from the 50s and 60s [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213719">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17222827">
                                         
-                                            64 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=DyslexicAtheist">DyslexicAtheist</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527931667"
+                                            href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528065930"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     185 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528102803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528103404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
