--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -221,13 +221,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17225599">
                                         
-                                            115 comments
+                                            130 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528100220"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    110 points
+                                    116 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528045873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    90 points
+                                    91 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=sbierwagen">sbierwagen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528082482"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    68 points
+                                    69 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/jasonfried/status/430871267881672704">If Github ends up selling itself one day, Microsoft will be the buyer (2014)</a>
+                                    <a href="https://professorwerner.org/shifting-from-central-planning-to-a-decentralised-economy-do-we-need-central-banks/">Do We Need Central Banks?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17224382">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17225327">
                                         
-                                            16 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528083256"
+                                            href="https://news.ycombinator.com/user?id=mendelsd">mendelsd</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528096658"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     51 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528105204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528105804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
