--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/wwdc/">WWDC 2018</a>
+                                    <a href="http://harmful.cat-v.org/software/c++/linus">Linus Torvalds on C++ (2007)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17225756">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17221988">
                                         
-                                            6 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ttflee">ttflee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528101944"
+                                            href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528059663"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    30 points
+                                    32 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=bcaa7f3a8bbc">bcaa7f3a8bbc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528105983"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    28 points
+                                    31 points
                                 </span>
                             </td>
                         </tr>
@@ -485,13 +485,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17226063">
                                         
-                                            7 comments
+                                            8 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=oneeyedpigeon">oneeyedpigeon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528104980"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    14 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528111203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528111803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
