--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://befused.com/git/github-bitbucket-move">Migrate from GitHub to Bitbucket</a>
+                                    <a href="http://www.catb.org/esr/halloween/">Halloween Documents [Microsoft vs. Free Software, 1998]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17223855">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17226485">
                                         
-                                            3 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mansilladev">mansilladev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528076773"
+                                            href="https://news.ycombinator.com/user?id=duncan_bayne">duncan_bayne</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528109210"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     6 points
                                 </span>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.axios.com/battery-pioneer-1528047409-d0515380-1881-4e96-891f-3763eaa84666.html">Battery Pioneer Announces New Cell That Doubles Energy Density of Lithium-Ion</a>
+                                    <a href="https://www.nbcnews.com/mach/science/major-physics-experiment-just-detected-particle-shouldn-t-exist-ncna879616">A major physics experiment just detected a particle that shouldn't exist</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17222439">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17225957">
                                         
-                                            2 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528062540"
+                                            href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528103987"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     6 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528112404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528113004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
