--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -533,13 +533,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17224329">
                                         
-                                            23 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sbierwagen">sbierwagen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528082482"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    84 points
+                                    85 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.vox.com/science-and-health/2018/5/31/17344406/crispr-mosquito-malaria-gene-drive-editing-target-africa-regulation-gmo">The debate over whether to use genetically modified mosquitoes to fight malaria</a>
+                                    <a href="https://frontendian.co/cors">Demystifying CORS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214676">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224772">
                                         
-                                            90 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527949094"
+                                            href="https://news.ycombinator.com/user?id=andRyanMiller">andRyanMiller</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528088194"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     83 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528112404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528113004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
