--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://befused.com/git/github-bitbucket-move">Migrate from GitHub to Bitbucket</a>
+                                    <a href="https://ziglang.org/">The Zig Programming Language</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17223855">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220294">
                                         
-                                            3 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mansilladev">mansilladev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528076773"
+                                            href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528043290"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    6 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528116004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528116604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
