--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gizmodo.com/alt-right-platform-gabs-management-is-now-blaming-a-lef-1826510673">Alt-Right Platform Gab's Mgmt Is Now Blaming a Leftist Conspiracy for Nazi Prob</a>
+                                    <a href="https://www.axios.com/battery-pioneer-1528047409-d0515380-1881-4e96-891f-3763eaa84666.html">Battery Pioneer Announces New Cell That Doubles Energy Density of Lithium-Ion</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17220932">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17222439">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=alphabettsy">alphabettsy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528050575"
+                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528062540"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     7 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528116604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528117203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
