--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bigthink.com/videos/sebastian-junger-on-tribalism-and-democracy">Are Politicians More Dangerous to American Democracy Than ISIS or Al Qaeda?</a>
+                                    <a href="https://medium.com/@achille.urbain/why-im-building-conductor-fa780da821cd">Why I'm building conductor</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17227009">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17227312">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=WayneSmallman">WayneSmallman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528114396"
+                                            href="https://news.ycombinator.com/user?id=WaldoJeffers">WaldoJeffers</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528117605"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     4 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528119004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528119605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
