--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wired.com/story/the-thanksgiving-effect-and-the-power-of-phone-data/">The 'Thanksgiving Effect' and the Creepy Power of Phone Location Data</a>
+                                    <a href="https://seekingalpha.com/article/4179058-japan-shows-fiat-currencies-doomed">Japan Shows Why – And How – All Fiat Currencies Are Doomed</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17219556">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17223375">
                                         
-                                            2 comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=clarkevans">clarkevans</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528034624"
+                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528071319"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528120803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528121403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
