--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17226225" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://bithublab.org/">BitHubLab, Search for projects on all the major Git platforms</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -591,7 +591,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528125005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528125604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
