--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17226225" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://bithublab.org/">BitHubLab, Search for projects on all the major Git platforms</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528075572"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    84 points
+                                    87 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.quantamagazine.org/cells-talk-and-help-one-another-via-tiny-tube-networks-20180423/">Cells Talk and Help One Another via Tiny Tube Networks</a>
+                                    <a href="https://www.icij.org/investigations/paradise-papers/apples-secret-offshore-island-hop-revealed-by-paradise-papers-leak-icij/">Apple’s Secret Offshore Island Hop Revealed by Paradise Papers Leak (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217203">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220006">
                                         
-                                            15 comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=edwinksl">edwinksl</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527985690"
+                                            href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528039897"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     74 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528125005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528125604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
