--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/science/2018/jun/04/doctors-hail-world-first-as-womans-advanced-breast-cancer-is-eradicated">Doctors hail world first as woman’s advanced breast cancer is eradicated</a>
+                                    <a href="http://blog.adnansiddiqi.me/getting-started-with-elasticsearch-in-python/">Getting started with Elasticsearch in Python</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17228517">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220226">
                                         
-                                            1 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528125236"
+                                            href="https://news.ycombinator.com/user?id=happy-go-lucky">happy-go-lucky</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528042619"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    18 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528128004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528128603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
