--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17222177">
                                         
-                                            384 comments
+                                            385 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smaili">smaili</a></strong> &nbsp;•&nbsp;
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    252 points
+                                    253 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528128004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528128603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
